# sedona-spatialbench

./: .asf.yaml  CONTRIBUTING.md  Cargo.toml  README.md  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  packaging.yml
benchmark/: run_benchmark.py  summarize_results.py
dev/release/: verify-release-candidate.sh
docs/: overview-methodology.md  single-node-benchmarks.md
docs/stylesheets/: extra.css
paper/: 01_download_data.sh  02_run_benchmark.sh  03_summarize.sh  README.md  benchmark_summary.md  config.env  pg_show_plan.py  print_schema.py
paper/results/: apache_sedona_results.json  duckdb_results.json  geopandas_results.json  pgstrom_results.json  sedonadb_results.json  spatial_polars_results.json
spatialbench/: Cargo.toml
spatialbench-arrow/src/: conversions.rs
spatialbench-cli/src/: plan.rs  runner.rs
spatialbench-cli/tests/: cli_integration.rs
spatialbench-queries/: geopandas_queries.py  print_queries.py  spatial_polars.py
spatialbench/src/: dists.dss  generators.rs  random.rs
spatialbench/src/spatial/: geometry.rs
spatialbench/src/spatial/utils/: antimeridian.rs  mod.rs
spatialbench/tests/: geometry_tests.rs
