[workspace]

members = ["spatialbench", "spatialbench-arrow", "spatialbench-cli"]

resolver = "2"

[workspace.package]
authors = ["Apache Sedona <dev@sedona.apache.org>"]
edition = "2021"
homepage = "https://github.com/apache/sedona-spatialbench/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/apache/sedona-spatialbench/"
version = "1.1.1"

[workspace.dependencies]
geo = "0.31.0"
geozero = { version = "0.14.0", features = ["with-wkb", "with-geo"]}

[profile.release]
strip = "debuginfo"
